@@ -1,0 +1,10 @@
+
+This tests that a hit test on a image map that has areas and anchors does not crash
+
+On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE".
+
+
+PASS successfullyParsed is true
+
+TEST COMPLETE
+
